# stm32_cpp_defmt

./: CMakeLists.txt
ext/: CMakeLists.txt
ext/cmsis/: CMakeLists.txt
ext/f072/: CMakeLists.txt  stm32f072.h
src/: CMakeLists.txt  hal_gpio.cpp  hal_uart.cpp  main.cpp  startup.cpp
src/inc/: hal_gpio.hpp  hal_uart.hpp  log.h
utl/: arm-gcc.cmake  logview.cmake  logview.py  merge.py  stm32f072.ld
